[UPDATE] 1. models 하위 파일 수정 2. localStrategy.js, auth.js id로 로그인 되게끔 수정

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "chlwp113",
-    "database": "prj-maindb",
+    "password": "USERPASSWORD",
+    "database": "codingloungedb",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
