--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "USERPASSWORD",
+    "password": "chlwp113",
     "database": "codingloungedb",
     "host": "127.0.0.1",
     "dialect": "mysql"
