[UPDATE] main.html : 해시태그 선택해서 게시글 불러오기

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "admin",
-    "password": "csedbadmin",
+    "username": "hansung",
+    "password": "hansung",
     "database": "codingloungedb",
     "host": "127.0.0.1",
     "dialect": "mysql"
